<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money Manager</string>
    <string name="action_settings">Settings</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="login_register_message">Please login if you already have an account. Or register to create a new account.</string>
    <string name="welcome_message">Welcome to Money Manager. This application will assist you in keeping track of your transactions in a simple and easy way.</string>
    <string name="title_activity_login_page">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="line">________________________________________________</string>
    <string name="login_image">Default login image</string>
    <string name="title_activity_my_accounts">MyAccounts</string>
    <string name="login_failed_message">Invalid username/password. Please try again.</string>
    <string name="welcome_myaccounts_message">Welcome To Your Accounts Page</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="register_failed_message">Registeration failed. Please try again later.</string>
    <string name="title_activity_admin_page">AdminPage</string>
    <string name="admin_welcome_message">Welcome Admin</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="register_instruction_message">Please enter a desired username and password to register. You will be redirected to the login page after your account has been successfuly created.</string>
    <string name="add_account_text">Add Account</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="account_instruction_message">Please enter the below information about the account you wish to create. The name that you enter for the account is the display name for the account.</string>
    <string name="account_name_text">Name</string>
    <string name="balance_text">Balance</string>
    <string name="button_create_account">Create Account</string>
    <string name="account_create_failed_message">Account creation failed. Please try again later.</string>
    <string name="title_activity_account">Account</string>
    <string name="account_text">Account:</string>
    <string name="account_name">dfasd</string>
    <string name="account_balance_text">Balance:</string>
    <string name="balance">adsfsa</string>
    <string name="button_deposit">Make Deposit</string>
    <string name="button_withdrawal">Make Withdrawal</string>
    <string name="title_activity_deposit_page">DepositPage</string>
    <string name="title_activity_withdrawal_page">WithdrawalPage</string>
    <string name="transaction_failed_message">Transaction Failed</string>
    <string name="button_make_transaction">Make Transaction</string>
    <string name="amount_text">Amount:</string>
    <string name="button_back_to_myaccounts">Back To My Accounts</string>
    <string name="category_text">Category:</string>

    <string-array name="category_array">
        <item>Food</item>
        <item>Rent</item>
        <item>Entertainment</item>
        <item>Clothing</item>
    </string-array>
    <string-array name="reports_array">
        <item>Spending Category</item>
    </string-array>

    <string name="report_button_text">Reports</string>
    <string name="title_activity_reports">Reports</string>
    <string name="create_report_text">Report Type:</string>
    <string name="button_generate_report">Generate Report</string>
    <string name="report_from_date"></string>
    <string name="pick_report_from_date">From Date</string>
    <string name="report_to_date"></string>
    <string name="pick_report_to_date">To Date</string>
    <string name="title_activity_spending_category_report">SpendingCategoryReport</string>
    <string name="spending_category_report_heading">Spending Category Report</string>
    <string name="generate_report_failed">Generate Report Failed</string>
    

</resources>
