<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".Account" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/account_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/account_text"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
        <TextView
	        android:id="@+id/account_name"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:text="@string/account_name"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/account_balance_text"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/account_balance_text"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
        <TextView
	        android:id="@+id/balance"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:text="@string/balance"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_deposit"
            android:onClick="transitionToDepositPage"
             />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_withdrawal"
            android:onClick="transitionToWithdrawalPage"
             />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back_to_myaccounts"
            android:onClick="transitionToMyAccountsPage"
             />

    </LinearLayout>

</LinearLayout>
