<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Reports" >

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView android:id="@+id/create_report_text"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/create_report_text"
	        android:layout_weight="1"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
        <Spinner
    		android:id="@+id/reports_spinner"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content" 
    		/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:text="@string/pick_report_from_date" 
		    android:onClick="showFromDatePickerDialog" 
		    />
        
           <TextView android:id="@+id/report_from_date"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/report_from_date"
	        android:layout_weight="1"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        
        <Button 
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content"
		    android:text="@string/pick_report_to_date" 
		    android:onClick="showToDatePickerDialog" 
		    />
        
        <TextView android:id="@+id/report_to_date"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/report_to_date"
	        android:layout_weight="1"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/generate_report_failed"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/generate_report_failed"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#FFFFFF"
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_generate_report"
            android:onClick="generateReport"
             />

    </LinearLayout>

</LinearLayout>
