<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        
        
	    <ImageView
	        android:id="@+id/loginicon"
	        android:layout_width="150dp"
	        android:layout_height="150dp"
	        android:src="@drawable/login_icon"
	        android:contentDescription="@string/login_image" 
	        />
	    
	 </LinearLayout>
	 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <EditText android:id="@+id/username"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/username_text"
	        android:layout_weight="1"
	        />
    </LinearLayout>
    
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <EditText android:id="@+id/password"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/password_text"
	        android:layout_weight="1"
	        android:inputType="textPassword"
	        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/login_failed"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/login_failed_message"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#ffffff"
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
        
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:onClick="authenticateLogin"
             />

    </LinearLayout>

    
    
</LinearLayout>
