<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".CreateAccount" >

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/account_instruction_message"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dp"
	        android:text="@string/account_instruction_message"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
	        android:text="@string/line"
	        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView android:id="@+id/account_account_name_text"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/account_name_text"
	        android:layout_weight="1"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
        <EditText android:id="@+id/account_account_name_entered"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:inputType="text"
	        android:hint=""
	        />
        
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView android:id="@+id/account_balance_text"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/balance_text"
	        android:layout_weight="1"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
        <EditText android:id="@+id/account_balance_entered"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:inputType="numberDecimal"
	        android:hint=""
	        />
        
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/account_create_failed"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/account_create_failed_message"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#ffffff"
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_create_account"
            android:onClick="createNewAccount"
             />

    </LinearLayout>
    

    

</LinearLayout>
