<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".RegisterPage" >

     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/register_instruction_message"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="25dp"
	        android:text="@string/register_instruction_message"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
	        android:text="@string/line"
	        android:textAppearance="?android:attr/textAppearanceMedium"
        />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView android:id="@+id/register_username_text"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/username_text"
	        android:layout_weight="1"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
        <EditText android:id="@+id/register_username_entered"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:inputType="text"
	        android:hint=""
	        />
        
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView android:id="@+id/register_password_text"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/password_text"
	        android:layout_weight="1"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
        <EditText android:id="@+id/register_password_entered"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:inputType="textPassword"
	        android:hint=""
	        />
        
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView android:id="@+id/register_password_confirm_text"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/confirm_password_text"
	        android:layout_weight="2"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
        
        <EditText android:id="@+id/register_password_confirm_entered"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textPassword"
	        android:hint=""
	        />
        
    </LinearLayout>
    
 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/register_failed"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/register_failed_message"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="#ffffff"
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="25dp"
	        android:layout_marginLeft="25dp"
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:onClick="registerUser"
             />

    </LinearLayout>
    

    

</LinearLayout>
